# Osiris-4.1

./: CMakeLists.txt  README.md
configuration/: configuration_separate_10.ini  list_8_test.txt
data/: configuration.ini  match.ini  match_CASIA-irisV2.txt  process.ini
image-process/: score_CASIA-Irisv2.txt
image-process/CircleParameters/: 0000_000_para.txt  0000_001_para.txt  0000_002_para.txt  0000_003_para.txt  0001_000_para.txt  0001_001_para.txt  0001_002_para.txt  0001_003_para.txt
src/: OsiEye.cpp  makefile  osiris
